--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -225,7 +225,7 @@
 
         </div>
     </section>
-    <section class="popular__courses">
+    <section class="popular__courses py-2">
         <div class="center">
             <div class="d-flex justify-content-between flex-wrap main courses__main row">
                 <div class="block col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-end scroll-block my-3">
