home page update

--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -165,55 +165,117 @@
         </div>
     </header>
     <section class="stay__home bc-banner bdr position-relative">
-        <div
-            class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
-            <div
-                class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
-                <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
-                    დარჩი სახლში და
-                    განაგრძე განვითარება
-                    <img src="./img/succes.svg" alt="" class="icon">
-                </h1>
-                <span class="c-blak helvetica-55 text-center text-md-left">დარეგისტრირდი მიიღე 50%-მდე ფასდაკლება
-                    საუკეთესო ონლაინ კურსებზე</span>
-                <div class="mt-5">
-                    <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+        <span class="row-left d-none d-md-block" href="#carouselExampleIndicators" role="button" data-slide="next"></span>
+        <span class="row-right d-none d-md-block" href="#carouselExampleIndicators" role="button" data-slide="prev"></span>
+        <div id="carouselExampleIndicators" class="carousel slide pb-5" data-ride="carousel" data-interval="false">
+            <div class="slider-section d-flex justify-content-center">
+                <div class="d-flex align-items-center carousel-indicators bottom-18">
+                    <span class="ball pointer active" data-target="#carouselExampleIndicators" data-slide-to="0"></span>
+                    <span class="ball pointer" data-target="#carouselExampleIndicators" data-slide-to="1"></span>
+                    <span class="ball pointer" data-target="#carouselExampleIndicators" data-slide-to="2"></span>
                 </div>
             </div>
-            <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
-                <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
-            </div>
-        </div>
-        <span class="row-left"></span>
-        <span class="row-right"></span>
-        <div class="slider-section d-flex justify-content-center">
-            <div class="d-flex align-items-center">
-                <span class="ball pointer active"></span>
-                <span class="ball pointer"></span>
-                <span class="ball pointer"></span>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div
+                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        <div
+                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
+                                დარჩი სახლში და
+                                განაგრძე განვითარება
+                                <img src="./img/succes.svg" alt="" class="icon">
+                            </h1>
+                            <span class="c-blak helvetica-55 text-center text-md-left">დარეგისტრირდი მიიღე 50%-მდე
+                                ფასდაკლება
+                                საუკეთესო ონლაინ კურსებზე</span>
+                            <div class="mt-5">
+                                <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+                            </div>
+                        </div>
+                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                            <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div
+                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        <div
+                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
+                                დარჩი სახლში და
+                                განაგრძე განვითარება
+                                <img src="./img/succes.svg" alt="" class="icon">
+                            </h1>
+                            <span class="c-blak helvetica-55 text-center text-md-left">დარეგისტრირდი მიიღე 50%-მდე
+                                ფასდაკლება
+                                საუკეთესო ონლაინ კურსებზე</span>
+                            <div class="mt-5">
+                                <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+                            </div>
+                        </div>
+                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                            <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <div
+                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        <div
+                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
+                                დარჩი სახლში და
+                                განაგრძე განვითარება
+                                <img src="./img/succes.svg" alt="" class="icon">
+                            </h1>
+                            <span class="c-blak helvetica-55 text-center text-md-left">დარეგისტრირდი მიიღე 50%-მდე
+                                ფასდაკლება
+                                საუკეთესო ონლაინ კურსებზე</span>
+                            <div class="mt-5">
+                                <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+                            </div>
+                        </div>
+                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                            <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
     <section class="premiup__prizes">
         <div class="center ">
             <div class="d-flex flex-column-reverse flex-md-row justify-content-between">
                 <div class="left__side col-12 col-md-6 d-flex flex-wrap ml-n2 p-0">
-                    <div class="col-6 p-2">
+                    <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/purple-Path183.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-6 p-2">
+                    <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/Group 420.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-6 p-2">
+                    <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/Group 460.svg" alt="">
                         </div>
                     </div>
-                    <div class="col-6 p-2">
+                    <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-centerk">
                             <img src="./img/Group 469.svg" alt="">
                         </div>
