--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -165,8 +165,10 @@
         </div>
     </header>
     <section class="stay__home bc-banner bdr position-relative">
-        <span class="row-left d-none d-md-block" href="#carouselExampleIndicators" role="button" data-slide="next"></span>
-        <span class="row-right d-none d-md-block" href="#carouselExampleIndicators" role="button" data-slide="prev"></span>
+        <span class="row-left d-none d-md-block" href="#carouselExampleIndicators" role="button"
+            data-slide="next"></span>
+        <span class="row-right d-none d-md-block" href="#carouselExampleIndicators" role="button"
+            data-slide="prev"></span>
         <div id="carouselExampleIndicators" class="carousel slide pb-5" data-ride="carousel" data-interval="false">
             <div class="slider-section d-flex justify-content-center">
                 <div class="d-flex align-items-center carousel-indicators bottom-18">
@@ -178,9 +180,9 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div
-                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
-                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            class="left__side d-flex flex-column col-12 col-lg-5 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
                             <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
                                 დარჩი სახლში და
                                 განაგრძე განვითარება
@@ -193,7 +195,7 @@
                                 <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
                             </div>
                         </div>
-                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                        <div class="right__side col-12 col-lg-5 col-md-6 d-flex justify-content-center">
                             <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
                         </div>
                     </div>
@@ -259,7 +261,7 @@
     <section class="premiup__prizes">
         <div class="center ">
             <div class="d-flex flex-column-reverse flex-md-row justify-content-between">
-                <div class="left__side col-12 col-md-6 d-flex flex-wrap ml-n2 p-0">
+                <div class="left__side col-12 col-md-6 col-lg-5 d-flex flex-wrap ml-n2 p-0">
                     <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/purple-Path183.svg" alt="">
@@ -281,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="right__side col-12 col-md-6 d-flex flex-column justify-content-center">
+                <div class="right__side col-12 col-md-6 col-lg-5 d-flex flex-column justify-content-center">
                     <h1 class="f-30 c-black helvetica-75 mb-5">პრემიუმ კურსები ტოპ
                         ლექტორებისგან</h1>
                     <span class="f-16 d-none d-md-flex c-light-text helvetica-55">გახდი ციფრული სამყაროს პროფესიონალი,
@@ -297,18 +299,19 @@
         </div>
     </section>
     <section class="popular__courses bc-banner overflow-hidden">
-        <div class="scroll-center">
+        <div class="scroll-center ">
             <div>
 
-                <div class="d-flex px-3 align-items-center flex-column mb-4">
-                    <h1 class="f-30 helvetica-75 c-black mb-3">პოპულარული კურსები</h1>
-                    <span class="c-black f-16 helvetica-55">გაიარე ჩვენთან არსებული პოპულარული კურსები</span>
+                <div class="d-flex px-3 align-items-center flex-column mb-4 center">
+                    <h1 class="f-30 helvetica-75 c-black mb-3 text-center text-md-left">პოპულარული კურსები</h1>
+                    <span class="c-black f-16 helvetica-55 text-center text-md-left">გაიარე ჩვენთან არსებული პოპულარული
+                        კურსები</span>
                 </div>
                 <div class="scroll-parent home_blocks">
                     <div class="main scroll-child overflow-auto">
                         <div
-                            class="block overflow-hidden col-12 px-0 d-flex flex-column justify-content-end scroll-block transition">
-                            <div class="hover__block">
+                            class="block-home block overflow-hidden col-12 px-0 d-flex flex-column justify-content-end scroll-block transition">
+                            <div class="hover__block br-tr br-tl">
 
                                 <div class="up__side bc-blue d-flex justify-content-between align-items-end">
                                     <div class="img-block d-flex align-items-center pl-3">
@@ -431,21 +434,21 @@
     <section class="academy__section">
         <div class="center">
             <div class="d-flex align-items-center justify-content-between">
-                <div class="left__side col-12 pl-0 col-md-6 pointer">
+                <div class="left__side col-12 pl-0 col-md-6 px-0 pointer">
                     <div>
                         <img class="w-100 d-none d-md-flex" src="./img/Group 1178.svg" alt="">
                     </div>
                     <div class="d-block d-md-none">
                         <span class="f-30 helvetica-75 c-white text-center d-block mb-4">რა არის ჩვენი აკადემია?</span>
-                        <span class="f-16 c-white text-center helvetica-55">აყევი ციფრული სამყაროს რითმს. ციფრული
+                        <p class="f-16 helvetica-55 c-white text-center ">აყევი ციფრული სამყაროს რითმს. ციფრული
                             უნდუსტრიის აკადემია უზრუნველყოფს თქვენზე
-                            მორგებული პრინციპით.</span>
+                            მორგებული პრინციპით.</p>
                         <div class="mt-5 d-flex justify-content-center">
                             <button class=" helvetica-75 blue-button">გაიგე მეტი</button>
                         </div>
                     </div>
                 </div>
-                <div class="right__side col-6 d-none d-md-flex flex-column">
+                <div class="right__side col-5 px-0 d-none d-md-flex flex-column">
                     <span class="f-30 helvetica-75 c-black d-block mb-4">რა არის ჩვენი აკადემია?</span>
                     <span class="f-16 c-light-text helvetica-55">აყევი ციფრული სამყაროს რითმს. ციფრული
                         უნდუსტრიის აკადემია უზრუნველყოფს თქვენზე
@@ -485,11 +488,11 @@
     <section class="master__class">
         <div class="center d-flex flex-column align-items-center">
             <h1 class="f-30 mb-4 helvetica-75 c-black">მასტერკლასები</h1>
-            <div class="block d-flex align-items-center flex-column flex-md-row">
-                <div class="left__side col-12 col-md-6">
+            <div class="block d-flex align-items-center justify-content-between flex-column flex-md-row">
+                <div class="left__side col-12 col-md-6 d-flex p-0 justify-content-center">
                     <img class="w-100" src="./img/Group 968.svg" alt="">
                 </div>
-                <div class="right__side col-12 col-md-6">
+                <div class="right__side col-12 col-md-5 p-0">
                     <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
                         უახლოესი ინფორმაცია მასტერკლასებზე.</span>
                     <form action="" class="masterclass__form mt-5">
@@ -514,6 +517,7 @@
                         <span class="f-12 helvetica-55 c-light-text d-flex mt-3 col-9 p-0">ვეთანხმები ციფრული
                             ინდისუტრიის აკადემიის
                             კონფიდენციალურობის პილიტიკას.</span>
+                        <button class="helvetica-75 mt-4 blue-button"> გაგზავნა</button>
                     </div>
                 </div>
             </div>
@@ -522,8 +526,9 @@
     <section class="student__works bc-banner">
         <div class="scroll-center d-flex flex-column align-items-center">
 
-            <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტების ნამუშევრები</h1>
-            <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+            <h1 class="f-30 mb-2 helvetica-75 c-black text-center">სტუდენტების ნამუშევრები</h1>
+            <span class="f-16 helvetica-55 c-light-text px-5 px-md-0 text-center">დაგვიტოვე შენი საკონტაქტო ინფორმაცია
+                და მიიღე
                 უახლოესი ინფორმაცია მასტერკლასებზე.</span>
             <div class="scroll-parent">
 
@@ -587,7 +592,7 @@
             </div>
 
             <div>
-                <button class=" helvetica-75 mt-5 blue-button">ნამუშევარი</button>
+                <button class="d-none d-md-flex helvetica-75 mt-5 blue-button">ნამუშევარი</button>
 
             </div>
         </div>
@@ -595,11 +600,14 @@
     </section>
     <section class="finished__courses">
         <div class="scroll-center d-flex flex-column align-items-center">
-            <h1 class="f-30 mb-2 helvetica-75 c-black">ჩვენი კურსდამთავრებულები</h1>
-            <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
-                უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+            <div class="center">
+                <h1 class="f-30 mb-2 helvetica-75 text-center text-md-left text-break c-black">ჩვენი კურსდამთავრებულები
+                </h1>
+                <span class="f-16 helvetica-55 text-center text-md-left c-light-text">დაგვიტოვე შენი საკონტაქტო
+                    ინფორმაცია და მიიღე
+                    უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+            </div>
             <div class="scroll-parent">
-
                 <div class="mt-5 px-0 px-md-3 scroll-child w-100 course-block overflow-auto">
                     <div class="block py-3 px-4  scroll-block">
                         <img class="mb-2" src="./img/Path 923.svg" alt="">
@@ -641,8 +649,12 @@
     </section>
     <section class="block__section bc-banner">
         <div class="scroll-center d-flex flex-column align-items-center">
-            <h1 class="f-30 mb-2 helvetica-75 c-black">ბლოგი</h1>
-            <span class="f-16 helvetica-55 c-light-text">გაეცანი სიახლეებს ტექნოლოგიურ სფეროში</span>
+            <div class="center">
+
+                <h1 class="f-30 mb-2 helvetica-75 c-black text-center text-md-left">ბლოგი</h1>
+                <span class="f-16 helvetica-55 c-light-text text-center text-md-left">გაეცანი სიახლეებს ტექნოლოგიურ
+                    სფეროში</span>
+            </div>
             <div class="scroll-parent">
 
                 <div class="w-100 mt-3 d-flex align-items-center justify-content-between overflow-auto scroll-child">
@@ -689,7 +701,7 @@
             </div>
 
             <div>
-                <button class=" helvetica-75 mt-5 blue-button">ყველა სტატია</button>
+                <button class="d-none d-md-flex helvetica-75 mt-5 blue-button">ყველა სტატია</button>
 
             </div>
         </div>
