--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -182,7 +182,7 @@
                     <div
                         class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
-                            class="left__side d-flex flex-column col-12 col-lg-5 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
                             <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
                                 დარჩი სახლში და
                                 განაგრძე განვითარება
@@ -202,9 +202,9 @@
                 </div>
                 <div class="carousel-item">
                     <div
-                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
-                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
                             <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
                                 დარჩი სახლში და
                                 განაგრძე განვითარება
@@ -217,16 +217,15 @@
                                 <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
                             </div>
                         </div>
-                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                        <div class="right__side col-12 col-lg-5 col-md-6 d-flex justify-content-center">
                             <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item ">
+                </div> <div class="carousel-item">
                     <div
-                        class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
+                        class="home__block position-relative center d-flex align-items-center justify-content-between flex-column-reverse flex-lg-row py-3 block__section">
                         <div
-                            class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
+                            class="left__side d-flex flex-column col-12 col-lg-6 col-md-6 p-0 pt-3 pt-lg-0 align-items-center align-items-md-start">
                             <h1 class="title f-40 helvetica-75 mb-5 text-center text-md-left">
                                 დარჩი სახლში და
                                 განაგრძე განვითარება
@@ -239,7 +238,7 @@
                                 <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
                             </div>
                         </div>
-                        <div class="right__side col-12 col-lg-6 d-flex justify-content-center">
+                        <div class="right__side col-12 col-lg-5 col-md-6 d-flex justify-content-center">
                             <img class="col-8 col-md-12" src="./img/stay-home.svg" alt="">
                         </div>
                     </div>
@@ -247,21 +246,10 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
-
-
     <section class="premiup__prizes">
         <div class="center ">
             <div class="d-flex flex-column-reverse flex-md-row justify-content-between">
-                <div class="left__side col-12 col-md-6 col-lg-5 d-flex flex-wrap ml-n2 p-0">
+                <div class="left__side col-12 col-md-6 d-flex flex-wrap ml-n2 p-0">
                     <div class="col-sm-6 col-12 p-2">
                         <div class="block d-flex justify-content-center align-items-center">
                             <img src="./img/purple-Path183.svg" alt="">
