--- a/test-scss/vlog.html
+++ b/test-scss/vlog.html
@@ -210,7 +210,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -232,7 +232,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -254,7 +254,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -276,7 +276,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -298,7 +298,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -320,7 +320,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
@@ -342,7 +342,7 @@
 
                             <div class="d-flex- flex-column px-4 mx-1 mb-3">
                                 <h1 class="f-20 mt-4 c-black helvetica-75">ციფრული მარკეტინგის </h1>
-                                <span class="f-14 d-block mt-4 c-light-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
+                                <span class="f-14 d-block mt-4 c-card-text helvetica-55 mb-1">ტექნოლოგიების განვითარებამ 
                                     შესაძლებელობა მომცა, რომ ქადა ორი 
                                     ხელით მეჭამა.</span>
                                 <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
