--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -315,7 +315,7 @@
                                         <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
                                             კემულარია</span>
                                         <span
-                                            class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                            class="f-14 d-md-block mt-4 c-card-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
                                             განვითარებამ
                                             შესაძლებელი გახადა, რომ სხვადასხვა
                                             პროფესიის ადამიანებმა თავად
@@ -354,7 +354,7 @@
                                         <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
                                             კემულარია</span>
                                         <span
-                                            class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                            class="f-14 d-md-block mt-4 c-card-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
                                             განვითარებამ
                                             შესაძლებელი გახადა, რომ სხვადასხვა
                                             პროფესიის ადამიანებმა თავად
@@ -392,7 +392,7 @@
                                         <span class="mt-3 mt-md-1 d-block f-14 c-light-text helvetica-55">ქრისტინა
                                             კემულარია</span>
                                         <span
-                                            class="f-14 d-md-block mt-4 c-light-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
+                                            class="f-14 d-md-block mt-4 c-card-text helvetica-55 mb-1 d-none ">ტექნოლოგიების
                                             განვითარებამ
                                             შესაძლებელი გახადა, რომ სხვადასხვა
                                             პროფესიის ადამიანებმა თავად
@@ -589,11 +589,11 @@
     <section class="finished__courses">
         <div class="scroll-center d-flex flex-column align-items-center">
             <div class="center">
-                <h1 class="f-30 mb-2 helvetica-75 text-center text-md-left text-break c-black">ჩვენი კურსდამთავრებულები
+                <h1 class="f-30 mb-2 helvetica-75 text-center text-break c-black">ჩვენი კურსდამთავრებულები
                 </h1>
-                <span class="f-16 helvetica-55 text-center text-md-left c-light-text">დაგვიტოვე შენი საკონტაქტო
+                <p class="f-16 helvetica-55 text-center c-light-text">დაგვიტოვე შენი საკონტაქტო
                     ინფორმაცია და მიიღე
-                    უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+                    უახლოესი ინფორმაცია მასტერკლასებზე.</p>
             </div>
             <div class="scroll-parent">
                 <div class="mt-5 px-0 px-md-3 scroll-child w-100 course-block overflow-auto">
@@ -639,9 +639,9 @@
         <div class="scroll-center d-flex flex-column align-items-center">
             <div class="center">
 
-                <h1 class="f-30 mb-2 helvetica-75 c-black text-center text-md-left">ბლოგი</h1>
-                <span class="f-16 helvetica-55 c-light-text text-center text-md-left">გაეცანი სიახლეებს ტექნოლოგიურ
-                    სფეროში</span>
+                <h1 class="f-30 mb-2 helvetica-75 c-black text-center">ბლოგი</h1>
+                <p class="f-16 helvetica-55 c-light-text text-center">გაეცანი სიახლეებს ტექნოლოგიურ
+                    სფეროში</p>
             </div>
             <div class="scroll-parent">
 
